# gr_navigation

./: .gitignore  LICENSE  README.md  id_rsa.pub
gr_config_files/: CMakeLists.txt  package.xml
gr_config_files/localization/robot_localization/: android_gazebo_sim.yaml  gps_gazebo_sim.yaml  navsat.yaml
gr_config_files/maps/empty/: map.pgm  map.yaml
gr_config_files/maps/thorvald/: map.pgm  map.yaml
gr_config_files/navigation/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  single_costmap.yaml
gr_config_files/navigation/managers/move_base/: nav_fn.yaml  pose_follower_move_base_params.yaml  sbpl_lattice_planner.yaml
gr_config_files/navigation/managers/move_base_flex/: controllers.yaml  planners.yaml
gr_control/gr_control_gui/: CMakeLists.txt  common.cpp  common.h  main.cpp  main_common.cpp  main_offline.cpp  main_online.cpp  myviz.cpp  myviz.h  offline.cpp  online.cpp  package.xml
gr_control/gr_control_gui/src/: main.cpp  myviz.cpp  myviz.h
gr_interfaces/gr_action_msgs/: CMakeLists.txt  package.xml
gr_interfaces/gr_action_msgs/action/: GRNavigation.action
gr_interfaces/safety_msgs/: CMakeLists.txt  package.xml
gr_interfaces/safety_msgs/msg/: FoundObject.msg  FoundObjectArray.msg  Object.msg  SafetyState.msg
gr_map_tools/gr_map_server/: CMakeLists.txt  package.xml
gr_map_tools/gr_map_server/include/gr_map_server/: gr_map_server.h
gr_map_tools/gr_map_server/src/: gr_map_server.cpp  gr_map_server_node.cpp
gr_map_tools/gr_map_utils/: CMakeLists.txt  package.xml  swap_maps.sh  test
gr_map_tools/gr_map_utils/cfg/: OSMMapConverter.cfg  TopologicalMapConverter.cfg
gr_map_tools/gr_map_utils/config/: default_osm.yaml  edges.yaml  workspace.yaml
gr_map_tools/gr_map_utils/include/gr_map_utils/: map_converter_interface.h  map_manager.hpp  osm_to_metric_converter.h  osm_to_topological_converter.h  tf_frame_publisher.h  topological_to_metric_converter.h
gr_map_tools/gr_map_utils/src/: experimental_node.cpp  experimental_node2.cpp  osm_to_metric_converter.cpp  osm_to_metric_node.cpp  osm_to_topological_converter.cpp  osm_to_topological_node.cpp  tf_frame_publisher.cpp  topological_to_metric_converter.cpp  topological_to_metric_node.cpp
gr_map_tools/mongodb_map_utils/: CMakeLists.txt  map_frame_manager.py  package.xml
gr_map_tools/mongodb_map_utils/include/mongodb_map_utils/: mongodb_map_manager.h  (+1 more)
gr_map_tools/mongodb_map_utils/src/: map_manager_node.cpp  mongodb_map_manager.cpp  tf_frame_publisher.cpp
gr_map_utils/: CMakeLists.txt  README.md  package.xml
gr_map_utils/cfg/: MapConverter.cfg  TopologicalMapConverter.cfg
gr_map_utils/include/gr_map_utils/: map_converter_interface.h  osm_to_topological_converter.h  tf_frame_publisher.h  topological_to_metric_converter.h
gr_map_utils/launch/: multi_map_server.launch
gr_map_utils/src/: main.cpp  osm_to_topological_converter.cpp  osm_to_topological_node.cpp  tf_frame_publisher.cpp  topological_to_metric_converter.cpp  topological_to_metric_node.cpp
gr_ml/: CMakeLists.txt  analyze_and_score.py  package.xml  record_detections.py  setup.py
gr_ml/scripts/: bag_detection_recorder.py  bag_features_2_image.py  bag_pc_to_image.py  offline_decoder.py  offline_score.py  online_detection_recorder.py  online_features_2_image.py  record_detections_ros.py  safety_classifier.py  terrain_classifier.py
gr_ml/src/gr_ml/: nn_model.py  pytorch_ros_interface.py
gr_navigation/: CMakeLists.txt  package.xml
gr_object_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
gr_object_recognition/scripts/: wheels_patterns.py
gr_object_recognition/src/gr_object_recognition/: wheels_observers.py
gr_pointcloud_filter/: CMakeLists.txt  package.xml
gr_pointcloud_filter/cfg/: Filters.cfg
gr_pointcloud_filter/include/gr_pointcloud_filter/: pointcloud_filter.h
gr_pointcloud_filter/launch/: gr_pointcloud_filter_nodelet.launch
gr_pointcloud_filter/src/: pointcloud_filter.cpp
gr_safety_monitors/: CMakeLists.txt  monitor_plugins.xml  package.xml
gr_safety_monitors/cfg/: ProximityMonitor.cfg
gr_safety_monitors/include/gr_safety_monitors/: monitors_manager.h  proximity_monitor.h
gr_safety_monitors/src/: monitors_manager.cpp  monitors_manager_node.cpp  proximity_monitor.cpp  proximity_monitor_node.cpp
gr_safety_monitors/src/safe_actions/: dynamic_reconfigure_safe_action.cpp  publisher_safe_action.cpp
gr_safety_policies/: CMakeLists.txt  actions_plugins.xml  package.xml  policies_plugins.xml
gr_safety_policies/cfg/: ProximityPolicy.cfg
gr_safety_policies/include/gr_safety_policies/: depth_proximity_policy.h  policies_manager.h  proximity_policy.h  weather_policy.h
gr_safety_policies/src/: action_manager_node.cpp  depth_proximity_policy_node.cpp  policies_manager.cpp  proximity_policy_node.cpp  weather_policy_node.cpp
gr_safety_policies/src/policies/: depth_proximity_policy.cpp  proximity_policy.cpp  weather_policy.cpp
gr_safety_policies/src/safe_actions/: dynamic_reconfigure_safe_action.cpp  publisher_safe_action.cpp
gr_safety_tools/: CMakeLists.txt  package.xml
gr_safety_tools/launch/: safety_stop_republisher.launch
gr_sbpl_trajectory_generator/: CMakeLists.txt  package.xml
gr_sbpl_trajectory_generator/include/gr_sbpl_trajectory_generator/: spbl_planner_wrapper.h
gr_sbpl_trajectory_generator/launch/: .sbpl_planner_wrapper.launch.swp  sbpl_planner_wrapper.launch
gr_sbpl_trajectory_generator/src/: sbpl_planner_node.cpp  sbpl_planner_wrapper.cpp
gr_topological_navigation/: CMakeLists.txt  package.xml  setup.py
gr_topological_navigation/scripts/: full_coverage_sm.py  full_topological_coverage.py  move_base_flex_full_coverage_sm.py
gr_topological_navigation/src/gr_topological_navigation/: topological_planner.py
gr_topological_navigation/tests/: test_bag_recorder.py
grassrobotics_navigation/: CMakeLists.txt  package.xml
safety_core/: CMakeLists.txt  package.xml
safety_core/include/fault_core/: fault_recovery_behavior.h
safety_core/include/safety_core/: fault_detector.h  fault_topology.h  policy_description.h  safe_policy.h
(+1622 files in other folders)
