<?xml version="1.0"?>
<package format="2">
  <name>gr_config_files</name>
  <version>0.0.1</version>
  <description>ROS package containing config files for grassrobotics</description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
