<package>
    <name>gr_map_utils</name>
    <version>0.0.4</version>
    <description>
      gr_map_utils package
    </description>

    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>map_server</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>mongodb_store</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>strands_navigation_msgs</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>map_server</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>mongodb_store</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>strands_navigation_msgs</run_depend>

</package>
