<?xml version="1.0"?>
<package>
  <name>gr_object_recognition</name>
  <version>0.0.1</version>
  <description>The gr_object_recognition package</description>

  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>fusion_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>fusion_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
