<?xml version="1.0"?>
<package>
  <name>gr_safety_tools</name>
  <version>0.0.1</version>
  <description>
    A set of tools for safety systems on autonomous navigation
  </description>

  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
