<?xml version="1.0"?>
<package format="2">
  <name>gr_sbpl_trajectory_generator</name>
  <version>0.1.5</version>
  <description>sbpl wrapper for agricultural proposes based on https://github.com/tu-darmstadt-ros-pkg/sbpl_lattice_planner.. 
               this version is intended to be move_base architecture independent
  </description>

  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>

  <license>MIT</license>
  <author >Jose Mayoral</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>

</package>
