<?xml version="1.0"?>
<package format="2">
  <name>gr_topological_navigation</name>
  <version>0.0.2</version>
  <description>gr_topological_navigation package</description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

</package>
