<package>
  <name>gr_control_gui</name>
  <version>0.9.4</version>
  <description>
     Based on the librviz_tutorial from William Woodall. This package allows an interaction to the topological map.
  </description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>navigation_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gr_map_utils</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>navigation_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gr_map_utils</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
