<package>
    <name>gr_action_msgs</name>
    <version>0.0.2</version>
    <description>
        This package provides common interfaces for navigation actions for GR project.
    </description>
    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_generation</run_depend>

</package>
