<?xml version="1.0"?>
<package>
  <name>safety_msgs</name>
  <version>0.0.1</version>
  <description>The safety_msgs package</description>

  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
